# Lan-UltraControllerV2

./: AGENTS.md  AGENTS_PT.md  CONCLUSAO.md  Cargo.toml  EFICIENCIA.md  FINAL.md  IMPLEMENTACAO_SCREEN_SHARE.md  NOTICE  OTIMIZACOES_FINAL.md  README.md  RESUMO_SCREEN_SHARE.md  SCREEN_SHARE.md  SCREEN_SHARE_STATUS.md  config.example.toml  setup-github.ps1
screen-share/: Cargo.toml
screen-share/src/: capture.rs  display.rs  encoder.rs  error.rs  lib.rs  protocol.rs
src/: config.rs  lib.rs  screen_share.rs  service.rs
