[package]
name = "screen-share"
description = "Modern screen sharing module for KVM switch with AV1 encoding"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/feschber/lan-mouse"

[dependencies]
log = "0.4.22"
thiserror = "2.0.0"
tokio = { version = "1.47.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
] }
futures = "0.3.31"
bytes = "1.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Video encoding - AV1 (optional - not enabled by default)
rav1e = { version = "0.7", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wayland-protocols = { version = "0.32.1", features = [
    "client",
    "staging",
    "unstable",
], optional = true }
wayland-client = { version = "0.31.1", optional = true }
ashpd = { version = "0.11.0", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.0"

[features]
# Default features - no AV1 encoder (requires nasm on Windows)
# AV1 encoder can be enabled with --features av1_software
default = ["wayland_capture", "windows_capture", "macos_capture"]
av1_software = ["dep:rav1e"]
av1_hardware = ["av1_software"] # Hardware acceleration will depend on software
wayland_capture = ["dep:wayland-client", "dep:wayland-protocols", "dep:ashpd"]
windows_capture = []
macos_capture = []
